--- a/.env.example
+++ b/.env.example
@@ -52,5 +52,9 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #百度翻译api
-BAIDU_TRANSLATE_APPID=20210720000892927
-BAIDU_TRANSLATE_KEY=UZBRaqZ37iC3LlR7Qvl6
+BAIDU_TRANSLATE_APPID=
+BAIDU_TRANSLATE_KEY=
+
+#阿里云短信
+SMS_ALIYUN_ACCESS_KEY_ID=
+SMS_ALIYUN_ACCESS_KEY_SECRET=
