--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^3.3",
         "mews/captcha": "~3.0",
         "mews/purifier": "~3.3",
+        "overtrue/easy-sms": "^1.3",
         "overtrue/laravel-lang": "~4.0",
         "overtrue/pinyin": "~4.0",
         "predis/predis": "~1.1",
