--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "spatie/laravel-permission": "~3.0",
         "summerblue/administrator": "8.*",
         "summerblue/laravel-active": "8.*",
+        "tymon/jwt-auth": "1.0.x-dev",
         "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
