--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ SMS_ALIYUN_TEMPLATE_REGISTER=
 # socialite weixin
 WEIXIN_KEY=
 WEIXIN_SECRET=
+#jwt
+JWT_SECRET=
+#jpush
+JPUSH_KEY=
+JPUSH_SECRET=
+
