--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.6",
+        "jpush/jpush": "^3.6",
         "laravel/framework": "^8.40",
         "laravel/horizon": "~5.6",
         "laravel/tinker": "^2.5",
