--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "jpush/jpush": "^3.6",
         "laravel/framework": "^8.40",
         "laravel/horizon": "~5.6",
+        "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "mews/captcha": "~3.0",
@@ -29,7 +30,6 @@
         "spatie/laravel-query-builder": "^3.5",
         "summerblue/administrator": "8.*",
         "summerblue/laravel-active": "8.*",
-        "tymon/jwt-auth": "1.0.x-dev",
         "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
