--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+dist
+weapp
+.DS_Store
+.env
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-.env
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
