--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "overtrue/easy-sms": "^1.3",
         "overtrue/laravel-lang": "~4.0",
         "overtrue/laravel-socialite": "~3.0",
-        "overtrue/laravel-wechat": "~5.0",
         "overtrue/pinyin": "~4.0",
+        "overtrue/laravel-wechat": "~5.0",
         "predis/predis": "~1.1",
         "propaganistas/laravel-phone": "^4.3",
         "spatie/laravel-permission": "~3.0",
@@ -35,6 +35,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.5",
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
@@ -69,7 +70,14 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:models",
+            "@php artisan ide-helper:meta"
         ]
+
     },
     "extra": {
         "laravel": {
