--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
   "description": "Larabbs WePy",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": false,
     "enhance": false,
     "postcss": false,
