--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,8 @@
     "minifyWXSS": false,
     "disableUseStrict": false,
     "showES6CompileOption": false,
-    "useCompilerPlugins": false
+    "useCompilerPlugins": false,
+    "minifyWXML": true
   },
   "compileType": "miniprogram",
   "appid": "wxb886252655a67e66",
