--- a/.env.example
+++ b/.env.example
@@ -25,16 +25,16 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=kqwiz38426
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.qq.com
 MAIL_PORT=465
-MAIL_USERNAME=runningerror@qq.com
-MAIL_PASSWORD=bntjfczzmmbodjgh
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=runningerror@qq.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -52,5 +52,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #百度翻译api
-BAIDU_TRANSLATE_APPID=20210720000892927
-BAIDU_TRANSLATE_KEY=UZBRaqZ37iC3LlR7Qvl6
+BAIDU_TRANSLATE_APPID=
+BAIDU_TRANSLATE_KEY=
